[project]
name = "retcon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kyle Kestell", email = "kyle@kestell.org"},
]
dependencies = [
    "gitpython>=3.1.43",
    "git-filter-repo>=2.45.0",
    "pygit2>=1.15.1",
    "openai>=1.37.0",
    "unidecode>=1.3.8",
    "tiktoken>=0.7.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
